--- a/project2/app/static/app/content/site.css
+++ b/project2/app/static/app/content/site.css
@@ -1,21 +1,20 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    padding-top: 90px;
+    padding-bottom: 50px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+div.card {
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 5px;
 }
 
-/* Set width on the form input elements since they're 100% wide by default */
-input,
-select,
-textarea {
-    max-width: 100%;
+div.card-header{
+    background-color: white;
 }
 
+a.card-link{
+    color: #000000;
+}
 /* styles for validation helpers */
 .field-validation-error {
     color: #b94a48;
