--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -8,33 +8,37 @@
             <div class="row">
               <div class="col-sm-3">
                 <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
-                          <div class="col-sm-3">
+              <div class="col-sm-3">
                 <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
                 <div class="col-sm-3">
-                    <div class="card">
+                   <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
@@ -45,39 +49,64 @@
             <div class="row">
               <div class="col-sm-3">
                 <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
                           <div class="col-sm-3">
-                <div class="card">
+               <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
                 <div class="col-sm-3">
-                    <div class="card">
+                   <div class="card">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
-                    <p class="card-text">Artists</p>
+                    <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                   </div>
                 </div>
               </div>
             </div>
         </div>
     </div>
+
+    <div class="modal fade bd-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-sm">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h4 class="modal-title" id="mySmallModalLabel">Music Name</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <span aria-hidden="true">×</span>
+                </button>
+              </div>
+              <div class="modal-body">
+                <p><b>Album:</b> None</p>
+                <p><b>Artistas:</b> None</p>
+                <p><b>Ano:</b> None</p>
+                <p><b>Editora:</b> None</p>
+              </div>
+            </div>
+        </div>
+    </div>
+
+
 
 
 {% endblock %}
