--- a/project2/app/templates/app/loginpartial.html
+++ b/project2/app/templates/app/loginpartial.html
@@ -9,13 +9,11 @@
             </ul>
         </form>
     {% else %}
-        <div class="navbar-right">
+        <div>
             {% csrf_token %}
-            <ul class="nav navbar-nav navbar-right">
-                <li style="padding-right: 10px;"><img src={{ photo }} style="height: 50px; width: 50px; border-radius: 30px 30px 30px 30px;"></li>
-                <li><span class="navbar-brand" style="color: #4cae4c; align-content: center">Olá {{ username }}</span></li>
-                <li><a href="/spotify_logout/">Log out</a></li>
-            </ul>
+            <span style="font-size: 18px; color: white; padding-right: 10px; padding-left: 20px">Hello, {{ username }}</span>
+            <img src={{ photo }} style="height: 40px; width: 40px; border-radius: 30px 30px 30px 30px;">
+            <a style="padding-left: 10px; color: white;" href="/spotify_logout/">Log out</a>
         </div>
     {% endif %}
 {% else %}
