--- a/project2/app/templates/app/login.html
+++ b/project2/app/templates/app/login.html
@@ -7,8 +7,8 @@
         <section id="loginForm" style="text-align: center">
             <form action="." method="post" class="form-horizontal">
                 {% csrf_token %}
-                <h2 style="margin-top: 10%"><a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-facebook-square"></i> Login com Facebook </a></h2>
-                <h2 style="color: #4cae4c"><a href="{% url 'spotify_login' %}"><i class="fa fa-spotify"></i> Login com Spotify </a></h2>
+                <h2 style="margin-top: 10%"><a style="color: #2d6987" href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-facebook-square"></i> Login com Facebook </a></h2>
+                <h2 style="color: #4cae4c"><a style="color: #4cae4c" href="{% url 'spotify_login' %}"><i class="fa fa-spotify"></i> Login com Spotify </a></h2>
                     <hr/>
                     <form action="." method="post" class="form-horizontal" class="col-md-3">
                     <div class="form-group">
