--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -6,6 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Spotify</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
+
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/font-awesome.css' %}" />
