--- a/project2/app/templates/app/login.html
+++ b/project2/app/templates/app/login.html
@@ -7,30 +7,30 @@
         <section id="loginForm" style="text-align: center">
             <form action="." method="post" class="form-horizontal">
                 {% csrf_token %}
-                <h2 style="margin-top: 10%"><a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-facebook-square"></i> Login com Facebook </a></h2>
-                <h2 style="color: #4cae4c"><a href="{% url 'spotify_login' %}"><i class="fa fa-spotify"></i> Login com Spotify </a></h2>
+                <h2><a href="{% url 'social:begin' 'facebook' %}"><i class="fa fa-facebook-square"></i> Login com Facebook </a></h2>
+                <h2><a href="{% url 'spotify_login' %}"><i class="fa fa-spotify"></i> Login com Spotify </a></h2>
                     <hr/>
                     <form action="." method="post" class="form-horizontal" class="col-md-3">
                     <div class="form-group">
                         <label for="id_username" class="col-md-5 control-label">User name</label>
-                        <div class="col-md-3">
+                        <div class="col-md-3" style="float: none;margin: 0 auto;">
                             {{ form.username }}
                         </div>
                     </div>
                     <div class="form-group">
                         <label for="id_password" class="col-md-5 control-label">Password</label>
-                        <div class="col-md-3">
+                        <div class="col-md-3" style="float: none;margin: 0 auto;">
                             {{ form.password }}
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-3 col-md-9">
+                        <div class="col-md-offset-3 col-md-9" style="float: none;margin: 0 auto;">
                             <input type="hidden" name="next" value="/" />
                             <input type="submit" value="Log in" class="btn btn-default" />
                         </div>
                     </div>
                     </form>
-                <p class="col-md-10">Ainda não estás registado? Resgista-te <a href="{% url 'register' %}">aqui.</a></p>
+                <p class="col-md-10" style="float: none;margin: 0 auto;">Ainda não estás registado? Resgista-te <a href="{% url 'register' %}">aqui.</a></p>
                 {% if form.errors %}
                 <p class="validation-summary-errors">Por favor introduza o user ou password correcta.</p>
                 {% endif %}
