--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -8,7 +8,7 @@
             <div class="row">
               <div class="col-sm-3">
                 <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -17,7 +17,7 @@
               </div>
               <div class="col-sm-3">
                 <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -26,7 +26,7 @@
               </div>
               <div class="col-sm-3">
                 <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -35,7 +35,7 @@
               </div>
                 <div class="col-sm-3">
                    <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -49,7 +49,7 @@
             <div class="row">
               <div class="col-sm-3">
                 <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -58,7 +58,7 @@
               </div>
               <div class="col-sm-3">
                 <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -67,7 +67,7 @@
               </div>
                           <div class="col-sm-3">
                <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
@@ -76,7 +76,7 @@
               </div>
                 <div class="col-sm-3">
                    <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static "app/img/nophoto.gif" %}" alt="Card image">
+                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top" src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                   <div class="card-body">
                     <h4 class="card-title">Music Name (feat.xxx)</h4>
                     <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
