--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -5,7 +5,9 @@
 <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>{{ title }} Jornal Online Universidade de Aveiro</title>
+    <title>Spotify</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
+    <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -17,24 +19,18 @@
 
 <body style="background-color: whitesmoke">
 
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <a style="padding-right: 5px" href="{% url 'home' %}" class="navbar-brand">Home</a>
-            <div class="collapse navbar-collapse" id="navb">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Statistics</a>
-                  </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                  <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
-                </form>
-              </div>
-            <a style="padding-left: 10px;">{% include 'app/loginpartial.html' %}</a>
-        </div>
+    <nav class="navbar navbar-toggleable-md navbar-dark bg-dark fixed-top">
+      <a style="padding-right: 5px" href="{% url 'home' %}" class="navbar-brand">Home</a>
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="#">Statistics</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search">
+              <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
+            </form>
+            {% include 'app/loginpartial.html' %}
     </nav>
 
 
