--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -1,4 +1,4 @@
-﻿﻿﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
 <html>
 <head>
     {% load staticfiles %}
@@ -9,7 +9,8 @@
     <link rel="icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'app/content/font-awesome.css' %}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
@@ -18,7 +19,6 @@
 </head>
 
 <body style="background-color: whitesmoke">
-
     <nav class="navbar navbar-toggleable-md navbar-dark bg-dark fixed-top">
       <a style="padding-right: 5px" href="{% url 'home' %}" class="navbar-brand">Home</a>
             <ul class="navbar-nav mr-auto">
@@ -30,7 +30,7 @@
               <input class="form-control mr-sm-2" type="text" placeholder="Search">
               <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
             </form>
-            {% include 'app/loginpartial.html' %}
+        {% include 'app/loginpartial.html' %}
     </nav>
 
 
@@ -47,6 +47,5 @@
 
 
 {% block scripts %}{% endblock %}
-
 </body>
 </html>
