--- a/project2/app/templates/app/login.html
+++ b/project2/app/templates/app/login.html
@@ -12,13 +12,13 @@
                     <hr/>
                     <form action="." method="post" class="form-horizontal" class="col-md-3">
                     <div class="form-group">
-                        <label for="id_username" class="col-md-5 control-label">User name</label>
+                        <label class="col-md-5 control-label">User name</label>
                         <div class="col-md-3">
                             {{ form.username }}
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="id_password" class="col-md-5 control-label">Password</label>
+                        <label class="col-md-5 control-label">Password</label>
                         <div class="col-md-3">
                             {{ form.password }}
                         </div>
@@ -41,10 +41,4 @@
     </div>
 </div>
 
-{% endblock %}
-
-
-{% block scripts %}
-    {% load staticfiles %}
-        <script src="{% static 'app/scripts/jquery.validate.min.js' %}"></script>
 {% endblock %}
