Artist Page added

--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div class="container body-content">
+    <div style="padding-top: 20px" class="container body-content">
         <div>
             <h1>Trending</h1>
             <div class="row">
