--- a/project2/app/templates/app/loginpartial.html
+++ b/project2/app/templates/app/loginpartial.html
@@ -19,7 +19,7 @@
 {% else %}
 
 <ul class="nav navbar-nav navbar-right">
-    <li><a style="background-color:transparent; color: #4cae4c ;font-size: initial" href="{% url 'login' %}">Login</a></li>
+    <li><a style="background-color:transparent; color: white ;font-size: initial; padding-left: 20px;" href="{% url 'login' %}">Login</a></li>
 </ul>
 
 {% endif %}
