--- a/project2/app/templates/app/layout.html
+++ b/project2/app/templates/app/layout.html
@@ -9,17 +9,17 @@
     <link rel="icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
     <link rel="shortcut icon" type="image/x-icon" href="{% static 'app/images/spotify.ico' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
-    <link rel="stylesheet" type="text/css" href="{% static 'app/content/bootstrap.css' %}" />
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/font-awesome.css' %}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
 </head>
 
 <body style="background-color: whitesmoke">
+
     <nav class="navbar navbar-toggleable-md navbar-dark bg-dark fixed-top">
+        <div class="container">
       <a style="padding-right: 5px" href="{% url 'home' %}" class="navbar-brand">Home</a>
             <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
@@ -30,7 +30,8 @@
               <input class="form-control mr-sm-2" type="text" placeholder="Search">
               <button class="btn btn-secondary my-2 my-sm-0" type="button">Search</button>
             </form>
-        {% include 'app/loginpartial.html' %}
+            {% include 'app/loginpartial.html' %}
+        </div>
     </nav>
 
 
@@ -40,7 +41,7 @@
 
             <footer class="container body-content">
                  <hr/>
-                <p>&copy; 2017 EDC - Cristiana Carvalho, Daniela Simões</p>
+                <p>&copy; 2017 EDC - Cristiana Carvalho, Daniela Simões, Domingos Nunes</p>
             </footer>
     </div>
 
