--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -13,7 +13,7 @@
                              src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                         <div class="card-body">
                             <h4 class="card-title"> {{ artist.name.value }} </h4>
-                            <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
+                            <a href="#" class="card-text badge badge-pill badge-secondary ">Songs</a>
                         </div>
                     </div>
                 </div>
