--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -12,7 +12,7 @@
                         <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
                              src="{{ image }}" alt="Card image">
                         <div class="card-body">
-                            <h4 class="card-title"> {{ artist }} </h4>
+                            <h6 class="card-title"> {{ artist }} </h6>
                             <a href="#" class="card-text badge badge-pill badge-secondary ">Songs</a>
                         </div>
                     </div>
@@ -21,44 +21,14 @@
         </div>
     </div>
     <div style="padding-top: 30px">
-        <h1>Trending</h1>
+        <h1>Top Tracks</h1>
         <div class="row">
             <div class="col-sm-3">
                 <div class="card">
                     <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
                          src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
                     <div class="card-body">
-                        <h4 class="card-title">Music Name (feat.xxx)</h4>
-                        <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                         src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Music Name (feat.xxx)</h4>
-                        <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                         src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Music Name (feat.xxx)</h4>
-                        <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                         src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
-                    <div class="card-body">
-                        <h4 class="card-title">Music Name (feat.xxx)</h4>
+                        <h6 class="card-title">Music Name (feat.xxx)</h6>
                         <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
                     </div>
                 </div>
