--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -23,16 +23,18 @@
     <div style="padding-top: 30px">
         <h1>Top Tracks</h1>
         <div class="row">
-            <div class="col-sm-3">
-                <div class="card">
-                    <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
-                         src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
-                    <div class="card-body">
-                        <h6 class="card-title">Music Name (feat.xxx)</h6>
-                        <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
+            {% for name in top-tracks %}
+                <div class="col-sm-3">
+                    <div class="card">
+                        <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
+                             src="{% static 'app/images/nophoto.gif' %}" alt="Card image">
+                        <div class="card-body">
+                            <h6 class="card-title">{{ name }}</h6>
+                            <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
+                        </div>
                     </div>
                 </div>
-            </div>
+            {% endfor %}
         </div>
     </div>
 </div>
