--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -23,7 +23,7 @@
     <div style="padding-top: 30px">
         <h1>Top Tracks</h1>
         <div class="row">
-            {% for name in top-tracks %}
+            {% for name in top_tracks %}
                 <div class="col-sm-3">
                     <div class="card">
                         <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
