--- a/project2/app/templates/app/index.html
+++ b/project2/app/templates/app/index.html
@@ -23,14 +23,14 @@
     <div style="padding-top: 30px">
         <h1>Top Tracks</h1>
         <div class="row">
-            {% for name, image in top_tracks %}
+            {% for name, image, artist in top_tracks %}
                 <div class="col-sm-3">
                     <div class="card">
                         <img data-toggle="modal" data-target=".bd-example-modal-sm" class="card-img-top"
                              src="{{ image }}" alt="Card image">
                         <div class="card-body">
                             <h6 class="card-title">{{ name }}</h6>
-                            <a href="#" class="card-text badge badge-pill badge-secondary ">Artists</a>
+                            <a href="#" class="card-text badge badge-pill badge-secondary ">{{ artist }}</a>
                         </div>
                     </div>
                 </div>
