info added to user

--- a/project2/app/templates/app/account.html
+++ b/project2/app/templates/app/account.html
@@ -12,8 +12,11 @@
                     <center><h5 class="card-title align-content-between">{{ username }}</h5></center>
                     <p class="card-text">
                     <ul style="list-style-type: none;">
+                        <li>Birthday: {{ birthdate }}</li>
+                        <li>Country: {{ country }}</li>
                         <li>Followers: {{ followers }}</li>
                         <li>Username: {{ id }}</li>
+
                     </ul>
                     </p>
                     <a href={{ external_urls }} class="btn btn-toolbar" target="_blank">My spotify page</a>
